**************************************************

Update: October 18th 2016
==================================================
->Added new attribute to QualityControl::Plotter::PlotTypesPlotter called m_strHisto2D set to "TH2F"
->Added new class QualityControl::Plotter::PlotterHisto2D for plotting TH2F objects
->The genericPlotter executable will now recognize TH2F objects

Update: October 12th 2016
==================================================
->Issuing new release v3.0

Update: October 10th 2016
==================================================
->New class QualityControl::Uniformity::ParameterLoaderFit inheriting from QualityControl::Uniformity::ParameterLoader
->QualityControl::Uniformity::ParameterLoaderAnalysis::loadAnalysisParameters() migrated to new class QualityControl::Uniformity::ParameterLoaderFit
->Added new attribute QualityControl::Uniformity::ParameterLoaderFit fitLoader to QualityControl::Uniformity::ParameterLoaderAnalysis and QualityControl::Plotter::ParameterLoaderPlotter
->Added new struct QualityControl::Plotter::InfoFit for tracking fit parameter attributes.
->Moved fit parameter attibutes from QualityControl::Timing::HistoSetup to QualityControl::Plotter::InfoFit
->Methods in QualityControl::Uniformity::AnalyzeResponseUniformity::getFit(), getParam(), and getParamError() now take a Plotter::InfoFit object instead of a Timing::HistoSetup object
->Added new method QualityControl::Plotter::PlotterGeneric::drawFits() for loading TF1 objects from previous files, can be overwritten by base class members.

Update: October 9th 2016
==================================================
->Implemented functionality for QualityControl::Plotter::PlotterHisto to draw TH1F objects with unit integral
->QualityControl::Plotter::PlotterHisto::m_map_histos changed from std::map to std::multimap to allow TH1F's having the same TName from different TFile's to be plotted